# auction_bot

./: .env  .gitignore  README.md  config.yaml  pyproject.toml
src/: BotSingleton.py  config.py  main.py
src/CRUD/: __init__.py  database_model.py  db_connector.py
src/ORM/: init_db.py  models.py
src/bot/auction/: auction.py
src/bot/fsm/: fsm_states.py
src/bot/handlers/admin/: admin.py  button_handlers.py  callbacks.py  text_handlers.py
src/bot/handlers/channel/: added_tochannel_router.py
src/bot/handlers/user/: bot_member_handler.py
src/bot/keyboards/: admin_keyboard.py
src/cryptobot/: __init__.py  utils.py
src/handlers/: routers.py
